Fix card image corner cropping
Accomplished cropping the corners of non-transparent card images using CSS. SHOULD be suitable for all of our card images even if they are non-transparent or JPG. Please submit an issue if you find this is not the case and provide a specific card image impacted.

--- a/cardDatabase/static/css/view_card_overlay.css
+++ b/cardDatabase/static/css/view_card_overlay.css
@@ -208,7 +208,7 @@ html.is-leaving .transition-fade {
     background-position: 0 0;
     background-size: 50vw;
     background-repeat: no-repeat;
-
+    border-radius: 6%/4%;
 }
 
 .card .front {
